--- a/index.html
+++ b/index.html
@@ -9,8 +9,99 @@
     <title>Medicine Through Time</title>
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
+    <!-- Custom CSS -->
+    <link href="css/myStylesheet.css" rel="stylesheet">
 </head>
 <body>
+    <!--Logo Start-->
+        <div>
+            <p style="text-align:center;">
+            <a href="https://placeholder.com"><img src="https:via.placeholder.com/200"></a>
+        </div>
+    <!--Logo End-->
+
+    <!--Navbar Start-->
+    <nav class="navbar navbar-default" role="navigation">
+        <div class="container">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <!-- navbar-brand is hidden on larger screens, but visible when the menu is collapsed -->
+                <a class="navbar-brand" href="index.html" style="color: white">Medicine Through Time</a>
+            </div>
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav">
+                    <li><a href="#" style="color: white">Ancient Medicine</a></li>
+                    <li><a href="#" style="color: white">Medieval Medicine</a></li>
+                    <li><a href="#" style="color: white">Renaissance Medicine</a></li>
+                    <li><a href="#" style="color: white">Modern Medicine</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <!--Navbar End-->
+    <!--Header Start-->
+    <div class="container">
+        <div class="row">
+            <div class="box">
+                <div class="col-lg-12">
+                    <hr>
+                    <h2 class="intro-text text-center">Section Title</h2>
+                    <hr>
+                </div>
+                <div class="col-lg-12 text-center"></div>
+            </div>
+    <!--Header End->
     
+    <!--Main Body-->
+            <div class="container">
+                <div class="row">
+                <!--Information-->
+                    <div class="col-md-3">
+                            <a href="https://placeholder.com"><img src="https:via.placeholder.com/275"></a>
+                    </div>
+                    <div class="col-md-9">
+                        <div class="thumbnail">
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent imperdiet convallis neque. Sed in ligula non leo facilisis egestas ac eu ipsum. Sed laoreet convallis nibh ac sollicitudin. Aliquam porta sapien vel leo aliquam sollicitudin. Curabitur viverra semper lacus eget lobortis. Cras elit mi, placerat quis iaculis in, rhoncus ultrices neque. Praesent facilisis euismod porttitor. Aliquam venenatis, ipsum id molestie suscipit, nisi orci varius risus, eu porttitor felis metus at odio. Proin id facilisis eros. Aenean nec hendrerit arcu, quis posuere dui. Proin feugiat velit ut luctus imperdiet. Phasellus convallis maximus nunc at suscipit. Suspendisse potenti. Proin orci lectus, imperdiet eu hendrerit id, mattis non dui. Suspendisse non varius nibh.</p>
+
+                            <p>Donec quis mauris justo. Nunc maximus nisl nunc, a varius velit pretium at. Nunc auctor varius elit in blandit. Mauris semper odio euismod lorem scelerisque, et tempus nisi faucibus. In ullamcorper blandit justo ut ullamcorper. Nulla ac ex ac felis gravida placerat. Duis consectetur, risus ut consequat semper, libero erat tempor tellus, auctor pulvinar diam turpis at augue. Etiam mollis nulla a magna aliquam tempor. Quisque neque erat, fermentum eget purus id, luctus ullamcorper ligula. Nulla id metus eget dolor eleifend lobortis eu sed ligula. Curabitur ultricies mauris tortor, bibendum condimentum mauris lacinia in. Nulla a tortor eu purus efficitur fringilla. Suspendisse potenti. Phasellus a porta odio, et mattis orci.</p>
+                        </div>
+                    </div>
+                    <div class="col-md-12">
+                        <div class="thumbnail">
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent imperdiet convallis neque. Sed in ligula non leo facilisis egestas ac eu ipsum. Sed laoreet convallis nibh ac sollicitudin. Aliquam porta sapien vel leo aliquam sollicitudin. Curabitur viverra semper lacus eget lobortis. Cras elit mi, placerat quis iaculis in, rhoncus ultrices neque. Praesent facilisis euismod porttitor. Aliquam venenatis, ipsum id molestie suscipit, nisi orci varius risus, eu porttitor felis metus at odio. Proin id facilisis eros. Aenean nec hendrerit arcu, quis posuere dui. Proin feugiat velit ut luctus imperdiet. Phasellus convallis maximus nunc at suscipit. Suspendisse potenti. Proin orci lectus, imperdiet eu hendrerit id, mattis non dui. Suspendisse non varius nibh.</p>
+
+                            <p>Donec quis mauris justo. Nunc maximus nisl nunc, a varius velit pretium at. Nunc auctor varius elit in blandit. Mauris semper odio euismod lorem scelerisque, et tempus nisi faucibus. In ullamcorper blandit justo ut ullamcorper. Nulla ac ex ac felis gravida placerat. Duis consectetur, risus ut consequat semper, libero erat tempor tellus, auctor pulvinar diam turpis at augue. Etiam mollis nulla a magna aliquam tempor. Quisque neque erat, fermentum eget purus id, luctus ullamcorper ligula. Nulla id metus eget dolor eleifend lobortis eu sed ligula. Curabitur ultricies mauris tortor, bibendum condimentum mauris lacinia in. Nulla a tortor eu purus efficitur fringilla. Suspendisse potenti. Phasellus a porta odio, et mattis orci.</p>
+                        </div>
+                    </div> 
+                    <div class="col-md-9">
+                        <div class="thumbnail">
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent imperdiet convallis neque. Sed in ligula non leo facilisis egestas ac eu ipsum. Sed laoreet convallis nibh ac sollicitudin. Aliquam porta sapien vel leo aliquam sollicitudin. Curabitur viverra semper lacus eget lobortis. Cras elit mi, placerat quis iaculis in, rhoncus ultrices neque. Praesent facilisis euismod porttitor. Aliquam venenatis, ipsum id molestie suscipit, nisi orci varius risus, eu porttitor felis metus at odio. Proin id facilisis eros. Aenean nec hendrerit arcu, quis posuere dui. Proin feugiat velit ut luctus imperdiet. Phasellus convallis maximus nunc at suscipit. Suspendisse potenti. Proin orci lectus, imperdiet eu hendrerit id, mattis non dui. Suspendisse non varius nibh.</p>
+
+                            <p>Donec quis mauris justo. Nunc maximus nisl nunc, a varius velit pretium at. Nunc auctor varius elit in blandit. Mauris semper odio euismod lorem scelerisque, et tempus nisi faucibus. In ullamcorper blandit justo ut ullamcorper. Nulla ac ex ac felis gravida placerat. Duis consectetur, risus ut consequat semper, libero erat tempor tellus, auctor pulvinar diam turpis at augue. Etiam mollis nulla a magna aliquam tempor. Quisque neque erat, fermentum eget purus id, luctus ullamcorper ligula. Nulla id metus eget dolor eleifend lobortis eu sed ligula. Curabitur ultricies mauris tortor, bibendum condimentum mauris lacinia in. Nulla a tortor eu purus efficitur fringilla. Suspendisse potenti. Phasellus a porta odio, et mattis orci.</p>
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                            <a href="https://placeholder.com"><img src="https:via.placeholder.com/275"></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!--Main Body End-->
+    <!--Footer-->
+    <footer>
+    
+    </footer>
+    <!-- jQuery -->
+    <script src="js/jquery.js"></script>
+    <!-- Bootstrap Core JavaScript -->
+    <script src="js/bootstrap.min.js"></script>
 </body>
 </html>
