--- a/ModernMedicine.html
+++ b/ModernMedicine.html
@@ -38,7 +38,7 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li><a href="AncientMedicine.html" style="color: white">Ancient Medicine</a></li>
-                    <li><a href="MedievalMedicine.html" style="color: white">Medieval Medicine</a></li>
+                    <li><a href="MediecalMedicine.html" style="color: white">Medieval Medicine</a></li>
                     <li><a href="RenaissanceMedicine.html" style="color: white">Renaissance Medicine</a></li>
                     <li><a href="ModernMedicine.html" style="color: white">Modern Medicine</a></li>
                 </ul>
