--- a/index.html
+++ b/index.html
@@ -80,25 +80,30 @@
                             <p>Donec quis mauris justo. Nunc maximus nisl nunc, a varius velit pretium at. Nunc auctor varius elit in blandit. Mauris semper odio euismod lorem scelerisque, et tempus nisi faucibus. In ullamcorper blandit justo ut ullamcorper. Nulla ac ex ac felis gravida placerat. Duis consectetur, risus ut consequat semper, libero erat tempor tellus, auctor pulvinar diam turpis at augue. Etiam mollis nulla a magna aliquam tempor. Quisque neque erat, fermentum eget purus id, luctus ullamcorper ligula. Nulla id metus eget dolor eleifend lobortis eu sed ligula. Curabitur ultricies mauris tortor, bibendum condimentum mauris lacinia in. Nulla a tortor eu purus efficitur fringilla. Suspendisse potenti. Phasellus a porta odio, et mattis orci.</p>
                         </div>
                     </div> 
-                    <div class="col-md-9">
-                        <div class="thumbnail">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent imperdiet convallis neque. Sed in ligula non leo facilisis egestas ac eu ipsum. Sed laoreet convallis nibh ac sollicitudin. Aliquam porta sapien vel leo aliquam sollicitudin. Curabitur viverra semper lacus eget lobortis. Cras elit mi, placerat quis iaculis in, rhoncus ultrices neque. Praesent facilisis euismod porttitor. Aliquam venenatis, ipsum id molestie suscipit, nisi orci varius risus, eu porttitor felis metus at odio. Proin id facilisis eros. Aenean nec hendrerit arcu, quis posuere dui. Proin feugiat velit ut luctus imperdiet. Phasellus convallis maximus nunc at suscipit. Suspendisse potenti. Proin orci lectus, imperdiet eu hendrerit id, mattis non dui. Suspendisse non varius nibh.</p>
-
-                            <p>Donec quis mauris justo. Nunc maximus nisl nunc, a varius velit pretium at. Nunc auctor varius elit in blandit. Mauris semper odio euismod lorem scelerisque, et tempus nisi faucibus. In ullamcorper blandit justo ut ullamcorper. Nulla ac ex ac felis gravida placerat. Duis consectetur, risus ut consequat semper, libero erat tempor tellus, auctor pulvinar diam turpis at augue. Etiam mollis nulla a magna aliquam tempor. Quisque neque erat, fermentum eget purus id, luctus ullamcorper ligula. Nulla id metus eget dolor eleifend lobortis eu sed ligula. Curabitur ultricies mauris tortor, bibendum condimentum mauris lacinia in. Nulla a tortor eu purus efficitur fringilla. Suspendisse potenti. Phasellus a porta odio, et mattis orci.</p>
-                        </div>
+                    <div class="col-md-4">
+                            <a href="https://placeholder.com"><img src="https:via.placeholder.com/350"></a>
                     </div>
-                    <div class="col-md-3">
-                            <a href="https://placeholder.com"><img src="https:via.placeholder.com/275"></a>
+                    <div class="col-md-4">
+                            <a href="https://placeholder.com"><img src="https:via.placeholder.com/350"></a>
+                    </div><div class="col-md-4">
+                            <a href="https://placeholder.com"><img src="https:via.placeholder.com/350"></a>
                     </div>
                 </div>
             </div>
         </div>
     </div>
     <!--Main Body End-->
-    <!--Footer-->
-    <footer>
-    
-    </footer>
+    <!--Footer Start-->
+        <footer>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-12 text-center">
+                        <p style="color: white">Copyright &copy; Medicine Through Time</p>
+                    </div>
+                </div>
+            </div>
+        </footer>
+    <!--Footer End-->
     <!-- jQuery -->
     <script src="js/jquery.js"></script>
     <!-- Bootstrap Core JavaScript -->
