--- a/index.html
+++ b/index.html
@@ -37,10 +37,13 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
-                    <li><a href="AncientMedicine.html" style="color: white">Ancient Medicine</a></li>
+                    <li><a href="AncientEgypt.html" style="color: white">Ancient Egypt</a></li>
+                    <li><a href="AncientGreece.html" style="color: white">Ancient Greece</a></li>
+                    <li><a href="AncientRome.html" style="color: white">Ancient Rome</a></li>
                     <li><a href="MedievalMedicine.html" style="color: white">Medieval Medicine</a></li>
                     <li><a href="RenaissanceMedicine.html" style="color: white">Renaissance Medicine</a></li>
-                    <li><a href="ModernMedicine.html" style="color: white">Modern Medicine</a></li>
+                    <li><a href="1750to1900.html" style="color: white">1750 to 1900</a></li>
+                    <li><a href="2OthCentury.html" style="color: white">20th Century</a></li>
                 </ul>
             </div>
         </div>
