Styling and Additional content

--- a/1750to1900.html
+++ b/1750to1900.html
@@ -11,6 +11,8 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom CSS -->
     <link href="css/myStylesheet.css" rel="stylesheet">
+    <!--Font-->
+    <link href="https://fonts.googleapis.com/css?family=Cinzel|Cormorant+Unicase" rel="stylesheet">
 </head>
 <body>
     <!--Logo Start-->
@@ -55,7 +57,7 @@
             <div class="box">
                 <div class="col-lg-12">
                     <hr>
-                    <h2 class="intro-text text-center">Section Title</h2>
+                    <h2 class="intro-text text-center">1750 to 1900</h2>
                     <hr>
                 </div>
                 <div class="col-lg-12 text-center"></div>
