--- a/AncientEgypt.html
+++ b/AncientEgypt.html
@@ -11,6 +11,8 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom CSS -->
     <link href="css/myStylesheet.css" rel="stylesheet">
+    <!--Font-->
+    <link href="https://fonts.googleapis.com/css?family=Cinzel|Cormorant+Unicase" rel="stylesheet">
 </head>
 <body>
     <!--Logo Start-->
