--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom CSS -->
     <link href="css/myStylesheet.css" rel="stylesheet">
+    <!--Font-->
+    <link href="https://fonts.googleapis.com/css?family=Cinzel|Cormorant+Unicase" rel="stylesheet">
 </head>
 <body>
     <!--Logo Start-->
@@ -55,7 +57,7 @@
             <div class="box">
                 <div class="col-lg-12">
                     <hr>
-                    <h2 class="intro-text text-center">Section Title</h2>
+                    <h2 class="intro-text text-center">Medicine Through Time</h2>
                     <hr>
                 </div>
                 <div class="col-lg-12 text-center"></div>
@@ -66,30 +68,12 @@
             <div class="container">
                 <div class="row">
                 <!--Information-->
-                    <div class="col-md-3">
-                        <a href="https://placeholder.com"><img src="https:via.placeholder.com/275"></a>
-                    </div>
-                    <div class="col-md-9">
-                        <div class="thumbnail">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent imperdiet convallis neque. Sed in ligula non leo facilisis egestas ac eu ipsum. Sed laoreet convallis nibh ac sollicitudin. Aliquam porta sapien vel leo aliquam sollicitudin. Curabitur viverra semper lacus eget lobortis. Cras elit mi, placerat quis iaculis in, rhoncus ultrices neque. Praesent facilisis euismod porttitor. Aliquam venenatis, ipsum id molestie suscipit, nisi orci varius risus, eu porttitor felis metus at odio. Proin id facilisis eros. Aenean nec hendrerit arcu, quis posuere dui. Proin feugiat velit ut luctus imperdiet. Phasellus convallis maximus nunc at suscipit. Suspendisse potenti. Proin orci lectus, imperdiet eu hendrerit id, mattis non dui. Suspendisse non varius nibh.</p>
-
-                            <p>Donec quis mauris justo. Nunc maximus nisl nunc, a varius velit pretium at. Nunc auctor varius elit in blandit. Mauris semper odio euismod lorem scelerisque, et tempus nisi faucibus. In ullamcorper blandit justo ut ullamcorper. Nulla ac ex ac felis gravida placerat. Duis consectetur, risus ut consequat semper, libero erat tempor tellus, auctor pulvinar diam turpis at augue. Etiam mollis nulla a magna aliquam tempor. Quisque neque erat, fermentum eget purus id, luctus ullamcorper ligula. Nulla id metus eget dolor eleifend lobortis eu sed ligula. Curabitur ultricies mauris tortor, bibendum condimentum mauris lacinia in. Nulla a tortor eu purus efficitur fringilla. Suspendisse potenti. Phasellus a porta odio, et mattis orci.</p>
-                        </div>
-                    </div>
                     <div class="col-md-12">
                         <div class="thumbnail">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent imperdiet convallis neque. Sed in ligula non leo facilisis egestas ac eu ipsum. Sed laoreet convallis nibh ac sollicitudin. Aliquam porta sapien vel leo aliquam sollicitudin. Curabitur viverra semper lacus eget lobortis. Cras elit mi, placerat quis iaculis in, rhoncus ultrices neque. Praesent facilisis euismod porttitor. Aliquam venenatis, ipsum id molestie suscipit, nisi orci varius risus, eu porttitor felis metus at odio. Proin id facilisis eros. Aenean nec hendrerit arcu, quis posuere dui. Proin feugiat velit ut luctus imperdiet. Phasellus convallis maximus nunc at suscipit. Suspendisse potenti. Proin orci lectus, imperdiet eu hendrerit id, mattis non dui. Suspendisse non varius nibh.</p>
-
-                            <p>Donec quis mauris justo. Nunc maximus nisl nunc, a varius velit pretium at. Nunc auctor varius elit in blandit. Mauris semper odio euismod lorem scelerisque, et tempus nisi faucibus. In ullamcorper blandit justo ut ullamcorper. Nulla ac ex ac felis gravida placerat. Duis consectetur, risus ut consequat semper, libero erat tempor tellus, auctor pulvinar diam turpis at augue. Etiam mollis nulla a magna aliquam tempor. Quisque neque erat, fermentum eget purus id, luctus ullamcorper ligula. Nulla id metus eget dolor eleifend lobortis eu sed ligula. Curabitur ultricies mauris tortor, bibendum condimentum mauris lacinia in. Nulla a tortor eu purus efficitur fringilla. Suspendisse potenti. Phasellus a porta odio, et mattis orci.</p>
+                            <p>Welcome to Medicine Through Time. This website offers a wide variety of information to both students and teachers who are either studying or teaching this subject.</p>
+                            <p>Once you have finished studying a particular area. Feel free to test your newly acquired knowledge with test questions from old exam papers.
+                            </p>
                         </div>
-                    </div> 
-                    <div class="col-md-4">
-                            <a href="https://placeholder.com"><img src="https:via.placeholder.com/350"></a>
-                    </div>
-                    <div class="col-md-4">
-                            <a href="https://placeholder.com"><img src="https:via.placeholder.com/350"></a>
-                    </div><div class="col-md-4">
-                            <a href="https://placeholder.com"><img src="https:via.placeholder.com/350"></a>
                     </div>
                 </div>
             </div>
